# d-sh

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  TESTS.md  d.sh
docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
program/: asc.sh  atom.sh  gitkraken.sh  keeweb.sh  postman.sh
scripts/: Dockerfile
scripts/command/: command-build.sh  command-check.sh  command-delete.sh  command-list.sh  command-run.sh
src/: main.rs
src/command/: mod.rs
src/command/check/: mod.rs
src/command/check/tests/: mod.rs
src/command/delete/: mod.rs
src/command/delete/tests/: mod.rs
src/command/help/: mod.rs
src/command/help/tests/: mod.rs
src/command/init/: mod.rs
src/command/init/tests/: mod.rs
src/command/list/: mod.rs
src/command/list/tests/: mod.rs
src/command/run/: mod.rs
src/command/run/tests/: mod.rs
src/command/tests/: mod.rs
src/common/: mod.rs
src/config/: mod.rs
src/config/dockerfile/: mod.rs
src/docker/: mod.rs
src/docker/tests/: mod.rs
src/download/: mod.rs
src/download/tests/: mod.rs
src/help/: mod.rs
src/help/tests/: mod.rs
src/io/: mod.rs
src/io/tests/: mod.rs
src/log/: mod.rs
src/main/shell/: d.sh
src/main/shell/program/: chrome.sh  dosbox.sh  filezilla.sh  firefox.sh  gimp.sh  gitkraken.sh  intellij.sh  keeweb.sh  postman.sh
src/main/shell/scripts/: Dockerfile.base  Dockerfile.from-package  Dockerfile.from-tgz-file
src/process/: mod.rs
src/scripts/: Dockerfile.from-deb-file
src/scripts/command/: command-build.sh  command-check.sh
src/template/: mod.rs
test/: test.sh
(+45 files in other folders)
