[package]
name = "d-sh"
version = "2.0.0"
authors = ["Emeric MARTINEAU"]
repository = "https://github.com/bubulemaster/d-sh"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.8"
serde_json = "^1.0"
glob = "^0.2"
users = "^0.7"
dirs = "^1.0"
handlebars = "^1.1.0"
rand = "^0.6"

[dev-dependencies]
regex = "^1"
